2007-06-29  Jonathan Pryor  <jonpryor@vt.edu>

	* dirent.c, grp.c, pwd.c, stdio.c, syslog.c, unistd.c: Following in the
	  logic of the 2007-06-27 logic...  Only return failure if an actual
	  DOCUMENTED error occurred.  For many of these functions, there are no
	  docuemented errors, so they "can't fail," even if errno were set.
	  All praise the POSIX standard?

2007-06-28  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c, map.h: Refresh -- to add Utimbuf copy conversion functions.
	  - Includes latest-and-greatest create-native-map output.
	  - Mono's Reflection output has changed as well --
	    FieldInfo.GetValue().ToString("x") is now "correct" for the underlying
	    type, so `short' enums are 0x0000, etc.
	  - Member sorting is now case-insensitive.

2007-06-27  Jonathan Pryor  <jonpryor@vt.edu>

	* grp.c, pwd.c: Only return failure if a documented errno is encountered.
	  This fixes UnixUserInfo.GetLocalUsers() and UnixGroupInfo.GetLocalGroups()
	  on systems missing the file /etc/default/nss (which generates ENOENT,
	  which isn't documented, so therefore it's not a "real" error).
	* mph.h: Add mph_return_if_val_in_list5().

2007-03-28  Wade Berrier  <miguel@novell.com>

	* supportw.c (SendMessageA/GetWindowLongA): Return values to fix some 
	warnings, even though these aren't called (Patch from suse rpms)

2007-01-23  Miguel de Icaza  <miguel@novell.com>

	* serial.c (poll_serial): Fix for #79073, based on the patch by
	Leszek Ciesielski, without introducing a GNU libc-ism.
	(write_serial): Handle EINTR here as well.

2006-11-30  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c: _cnm_return_val_if_overflow() should be a no-op unless DEBUG is
	  defined.  "Fixes" false positives pending further investigation.

2006-11-18  Miguel de Icaza  <miguel@novell.com>

	* serial.c (poll_serial): Do not report an error for EINTR. 

2006-11-18  Jelle Hissink  <Jelle.Hissink@C-it.nl>

	* serial.c (poll_serial): Add timeout parameter to poll.

	Fixes #79722 and #79735
